--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,8 @@
-APP_NAME=JadwalPertunjukan
+APP_NAME=Laravel
 APP_ENV=local
-APP_KEY=base64:i10PSPvjZZ/AvsWSbSGIBBv1RktT3PUzyzneo5qhM88=
+APP_KEY=
 APP_DEBUG=true
-APP_URL=http://127.0.0.1:8000
+APP_URL=http://localhost
 
 LOG_CHANNEL=stack
 LOG_LEVEL=debug
@@ -10,9 +10,9 @@ LOG_LEVEL=debug
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=contohdb
-DB_USERNAME=root
-DB_PASSWORD=
+DB_DATABASE=your_db_name
+DB_USERNAME=your_db_user
+DB_PASSWORD=your_db_password
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
